Fix footer bottom to show all info on same line - Change copyright text display to inline - Ensure copyright and payment image align horizontally

--- a/catalog/view/theme/ranger_fashion/stylesheet/main.css
+++ b/catalog/view/theme/ranger_fashion/stylesheet/main.css
@@ -1459,7 +1459,7 @@ a:focus {
     margin: 0;
     white-space: normal;
     flex-shrink: 0;
-    display: inline-block;
+    display: inline;
 }
 
 .footer.style-3 .f-copyight-text .getcommerce-copyright {
